--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ body {
   margin: 0 auto;
 }
 
+/* ------header------ */
+
 .header {
   text-align: center;
 }
@@ -69,6 +71,8 @@ body {
   color: #fff;
 }
 
+/* ------slider------ */
+
 .slider__item {
   min-height: 600px;
   background-repeat: no-repeat;
@@ -94,6 +98,8 @@ body {
 .slick-prev {
   left: 20px;
 }
+
+/* ------search------ */
 
 .search__inner {
   padding: 60px 0 70px;
@@ -150,6 +156,8 @@ body {
   left: 9px;
 }
 
+/* ------popular------ */
+
 .popular {
   text-align: center;
 }
@@ -168,6 +176,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 100px 0;
+  flex-wrap: wrap;
 }
 
 .popular__img {
@@ -190,6 +199,8 @@ body {
   background-color: #c4c4c4;
   padding: 13px 48px;
 }
+
+/* ------reason------ */
 
 .reason {
   padding: 100px 0;
@@ -251,6 +262,8 @@ body {
   background-image: url(../images/arrow-black.svg);
 }
 
+/* ------best------ */
+
 .best {
   background-size: cover;
   background-repeat: no-repeat;
@@ -277,4 +290,185 @@ body {
   background-color: #000;
   padding: 16px 18px;
   display: inline-block;
+}
+
+/* ------about------ */
+
+.about {
+  background-color: #000;
+  color: #fff;
+  padding: 100px 0;
+}
+
+.about ul {
+  list-style: none;
+}
+
+.about__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about__title {
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 400;
+  font-family: "PT Serif", serif;
+  margin-bottom: 47px;
+  text-align: center;
+}
+
+.our-managers__title {
+  margin-bottom: 27px;
+}
+
+.our-managers {
+  width: 297px;
+}
+
+.our-managers__items {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.our-managers__img {
+  width: 100px 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 22px;
+}
+
+.our-managers__list {
+  line-height: 21px;
+  margin-bottom: 43px;
+}
+
+.our-managers__btn {
+  border: none;
+  color: #000;
+  background-color: #fff;
+  padding: 16px 21px;
+  font-size: 18px;
+  line-height: 18px;
+  cursor: pointer;
+}
+
+.blog {
+  width: 411px;
+}
+
+.blog__link {
+  line-height: 18px;
+  text-decoration: none;
+  color: #fff;
+  margin-bottom: 28px;
+  padding-left: 67px;
+  display: inline-block;
+  position: relative;
+}
+
+.blog__link::before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background-image: url(../images/arrow-white.svg);
+  position: absolute;
+  left: 0;
+  top: -4px;
+}
+
+.reviews {
+  width: 300px;
+}
+
+.reviews__img {
+  width: 300px;
+  height: 127px;
+  margin-bottom: 22px;
+  object-fit: cover;
+}
+
+.reviews__text {
+  line-height: 21px;
+  margin-bottom: 22px;
+}
+
+.reviews__link {
+  color: #000;
+  background-color: #fff;
+  padding: 16px 21px;
+  line-height: 18px;
+  text-decoration: none;
+  display: inline-block;
+}
+
+/* ------footer------ */
+
+.footer__top {
+  padding: 100px 0;
+  background-color: #000;
+  color: #fff;
+}
+
+.footer__top-inner {
+  display: flex;
+  align-items: center;
+}
+.footer__menu-list {
+  list-style: none;
+  width: 250px;
+  margin-right: 50px;
+}
+
+.footer__menu-link {
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 36px;
+  color: #fff;
+}
+.footer__form {
+  display: flex;
+  align-items: center;
+}
+
+.footer__form-label {
+  line-height: 18px;
+  color: #888;
+  margin-right: 10px;
+}
+
+.footer__form-input {
+  display: block;
+  width: 511px;
+  height: 69px;
+  background-color: #fff;
+  border: none;
+  padding: 0 15px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #888;
+}
+
+.footer__form-input::placeholder {
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #888;
+}
+
+.footer__form-btn {
+  cursor: pointer;
+  color: #fff;
+  border: none;
+  background-color: #c4c4c4;
+  padding: 27px 35px;
+}
+
+.footer__logo {
+  padding: 3px 0 23px;
+  text-align: center;
 }
