--- a/css/media.css
+++ b/css/media.css
@@ -16,6 +16,39 @@
   }
 }
 
+/* ------1140px------ */
+
+@media (max-width: 1140px) {
+  .about__inner {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .reviews {
+    width: 100%;
+    margin-top: 50px;
+  }
+
+  .blog {
+    margin-left: 150px;
+  }
+
+  .footer__top-inner {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .footer__menu {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .footer__menu-list {
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+
 /* ------992px------ */
 
 @media (max-width: 992px) {
@@ -62,6 +95,45 @@
   }
 }
 
+/* ------900px------ */
+
+@media (max-width: 900px) {
+  .about__inner {
+    display: block;
+  }
+
+  .blog {
+    margin: 50px auto;
+    max-width: 420px;
+    width: auto;
+  }
+
+  .reviews {
+    margin: 0 auto;
+    max-width: 420px;
+  }
+
+  .our-managers {
+    margin: 0 auto;
+  }
+
+  .footer__form {
+    flex-direction: column;
+  }
+
+  .footer__form-label {
+    text-align: center;
+    margin-bottom: 20px;
+    margin-right: 0;
+  }
+
+  .footer__form-input {
+    text-align: center;
+    margin-bottom: 15px;
+    width: 290px;
+  }
+}
+
 /* ------768px------ */
 
 @media (max-width: 768px) {
@@ -83,6 +155,13 @@
 
   .best {
     min-height: 400px;
+  }
+
+  .footer__top,
+  .about,
+  .reason,
+  .popular__inner {
+    padding: 50px 0;
   }
 }
 
@@ -151,6 +230,11 @@
   .search__form-btn::before {
     display: none;
   }
+
+  .about__title {
+    line-height: 42px;
+    font-size: 36px;
+  }
 }
 
 /* ------360px------ */
@@ -159,5 +243,13 @@
   .reason__title {
     font-size: 24px;
     line-height: 28px;
+  }
+
+  .our-managers {
+    width: 275px;
+  }
+
+  .reviews__img {
+    width: 270px;
   }
 }
